@startuml

title __FACADE's Class Diagram__\n

  namespace project {
    namespace Facade {
      class project.Facade.ConfigDB {
          + config()
      }
    }
  }
  

  namespace project {
    namespace Facade {
      class project.Facade.DataBaseSelect {
          + EditBase()
          + InsertPack()
          + SelectFromDatabase()
          + Selectnewest()
          + addwithselect()
          + selectonecell()
      }
    }
  }
  

  namespace project {
    namespace Facade {
      abstract class project.Facade.Facade {
          {static} ~ notify : String
          + EditBase()
          + InsertOrder()
          + InsertPack()
          + SelectFromDatabase()
          + Selectnewest()
          + UpdateOrder()
          + addwithselect()
          + config()
          {static} + deleteNotify()
          {static} + getNotify()
          + login()
          + register()
          + selectonecell()
          {static} + setNotify()
      }
    }
  }
  

  namespace project {
    namespace Facade {
      class project.Facade.OpenStreetMapBase {
          + InsertOrder()
          + UpdateOrder()
      }
    }
  }
  

  namespace project {
    namespace Facade {
      class project.Facade.UserAuthentication {
          + login()
          + register()
      }
    }
  }
  

  project.Facade.Facade o-- project.Facade.ConfigDB : configDB
  project.Facade.Facade o-- project.Facade.DataBaseSelect : dataBaseSelect
  project.Facade.Facade o-- project.Facade.OpenStreetMapBase : openStreetMapBase
  project.Facade.Facade o-- project.Facade.UserAuthentication : userAuthentication


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
